some styles need to add

--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,75 @@
       * {
         margin: 0px;
         padding: 0px;
+        font-family: sans-serif;
       }
-
       article {
-        width: 500px;
-        height: 400px;
+        width: 600px;
+        height: 500px;
         border: 1px solid;
+        margin: 200px auto;
+      }
+      #box {
+        width: 450px;
+        height: 350px;
+        margin: 70px auto;
+      }
+      article h1 {
+        font-size: 40px;
+        font-weight: 100;
+        color: rgba(0, 0, 0, 70%);
+        text-align: left;
+      }
+      #underscores {
+        padding-top: 20px;
+        padding-bottom: 10px;
+        color: rgba(0, 0, 0, 100%);
+        font-weight: 900;
+      }
+      #text-styles {
+        font-size: 24px;
+        line-height: 30px;
+        font-weight: 100;
+        color: rgba(0, 0, 0, 50%);
+        padding-top: 20px;
+      }
+      #button {
+        text-transform: uppercase;
+        font-size: 30px;
+        height: 40px;
+        width: 450px;
+        border: 1px solid;
+        text-align: center;
+        background-color: #4184e1;
+        color: white;
+        padding-top: 20px;
+        margin-top: 20px;
+
+        border-radius: 40px;
+      }
+      p {
+        font-weight: 100;
+        font-size: 16 px;
+        padding-top: 30px;
+        color: rgba(0, 0, 0, 30%);
       }
     </style>
   </head>
   <body>
-    <article></article>
+    <article>
+      <div id="box">
+        <h1>Built your first chatbot in 10 minutes!</h1>
+        <p id="underscores">_______</p>
+        <p id="text-styles">
+          Have a bot answering questions from customers on your within 10
+          minutes of signing up for ChatBot
+        </p>
+        <p id="button">try now</p>
+        <p>
+          By clicking try now you create an account and agree to our Terms and
+          Conditions and Privacy Policy
+        </p>
+      </div>
+    </article>
   </body>
 </html>
