--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       #box {
         width: 450px;
         height: 350px;
-        margin: 70px auto;
+        margin: 55px auto;
       }
       article h1 {
         font-size: 40px;
@@ -34,6 +34,7 @@
         font-weight: 900;
       }
       #text-styles {
+        word-spacing: 2px;
         font-size: 24px;
         line-height: 30px;
         font-weight: 100;
@@ -42,17 +43,19 @@
       }
       #button {
         text-transform: uppercase;
-        font-size: 30px;
-        height: 40px;
+        height: 60px;
         width: 450px;
         border: 1px solid;
         text-align: center;
         background-color: #4184e1;
         color: white;
-        padding-top: 20px;
         margin-top: 20px;
-
         border-radius: 40px;
+      }
+      #button p{
+        padding-top: 16px;
+        font-size: 30px;
+        color: white;
       }
       p {
         font-weight: 100;
@@ -71,7 +74,8 @@
           Have a bot answering questions from customers on your within 10
           minutes of signing up for ChatBot
         </p>
-        <p id="button">try now</p>
+        <div id="button"><p>try now</p></div>
+        <!-- <p id="button">try now</p> -->
         <p>
           By clicking try now you create an account and agree to our Terms and
           Conditions and Privacy Policy
